# concurrent-log-analyzer

./: .gitignore  CMakeLists.txt  README.md
include/: bounded_queue.hpp  line_span.hpp  log_stats.hpp  mapped_file.hpp
scripts/: generate_logs.py
src/: main.cpp
tests/: test_tokenizer.cpp  verify_zero_alloc.cpp
